# ransac_gpd

./: CMakeLists.txt  package.xml
action/: get_grasping_point.action
cfg/: parameters.cfg
scripts/: action_client.py  grasp_action_tester.py
src/: listener.cpp  viewer.cpp
